# mail-svc

./: Main.hs  mail-svc.cabal  mail-svc.conf
