name:                mail-svc
version:             0.1.0.0
license:             MIT
author:              Max Taldykin
maintainer:          max@formalmethods.ru

build-type:          Simple
cabal-version:       >=1.10

executable mail-svc
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  main-is:             Main.hs
  hs-source-dirs:      .
  build-depends:
    base >=4.7 && <4.8,

    configurator      == 0.3.*,
    hsyslog           == 2.0.*,
    mime-mail         == 0.4.*,
    old-locale        == 1.0.*,
    postgresql-simple == 0.4.7.*,
    resource-pool     == 0.2.*,
    text              == 1.2.*,
    bytestring        == 0.10.*,
    transformers      == 0.4.*,
    time              == 1.4.*,
    vector            == 0.10.*


  default-extensions:
    OverloadedStrings,
    LambdaCase, RecordWildCards

  other-extensions:
    QuasiQuotes
